Document /corpora/{corpus}/components
